# paige

./: .gitignore  LICENSE  Makefile  README.md  install.py  pyproject.toml
.page/: pagefile.py
.paige/: build_tasks.py  dev_tasks.py  paigefile.py  pyproject.toml
src/page/: cli.py  core.py
src/paige/: __init__.py  cli.py  config.py  const.py  core.py  deps.py  discover.py  exec.py  fn.py  generate.py  initfile.py  logger.py  main.py  makefile.py  makefile_gen.py  namespace.py  parser.py  path.py
src/paige/internal/: runner.py
tests/: test_path.py
