[tool.poetry]
name = "paige"
version = "0.1.0"
description = "A Python build tool inspired by Sage/Mage."
authors = ["Theodor Emanuelsson <theodor.emanuelsson@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "paige",  from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.8"

[tool.poetry.scripts]
paige = "paige.cli:cli"
paige-init = "paige.cli:init_command"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
