[project]
name = "paige"
version = "0.1.0"
description = "A Python build tool inspired by Sage/Mage."
authors = [
    {name = "Theodor Emanuelsson", email = "theodor.emanuelsson@me.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8"
]

[project.scripts]
paige = "paige.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
